added banner and added to scratch

--- a/CodePen.html
+++ b/CodePen.html
@@ -29,7 +29,13 @@
                         <a href="CodePen.html">Practice Lesson</a>
                     </div>
                 </div>
-                <a href="Contact.html" class="bar-button button">Contact Us</a>
+                <div class="dropdown">
+                    <a href="Contact.html" class="bar-button button">Contact Us</a>
+                    <div class="dropdown-content">
+                        <a href="Contact.html">Contact Us</a>
+                        <a href="volunteer.html">Volunteer</a>
+                    </div>
+                </div>
             </div>
 
         </div>
