--- a/Scratch.html
+++ b/Scratch.html
@@ -29,7 +29,13 @@
                     <a href="CodePen.html">Practice Lesson</a>
                 </div>
             </div>
-            <a href="Contact.html" class="bar-button button">Contact Us</a>
+            <div class="dropdown">
+                <a href="Contact.html" class="bar-button button">Contact Us</a>
+                <div class="dropdown-content">
+                    <a href="Contact.html">Contact Us</a>
+                    <a href="volunteer.html">Volunteer</a>
+                </div>
+            </div>
         </div>
 
     </div>
@@ -45,13 +51,14 @@
     <h2>Let's Make a Game</h2>
     <hr>
     <h3>1. Creating your game</h3>
-    <p>1. Create a new scratch file on <a href="https://scratch.mit.edu/explore/projects/games/">codepen</a>. With Scratch, you can program your own interactive stories, games, and animations and share your creations with others in the online community.</p>
+    <p>1. Create a new scratch file on <a href="https://scratch.mit.edu/explore/projects/games/">scratch</a>. With Scratch, you can program your own interactive stories, games, and animations and share your creations with others in the online community.</p>
     <p>2. Name your scratch file. It can be your name or anything relevant to your game. Example: "Madeleine's Game"</p>
-    <img src="Step1codepen.png" style="width:100%;" />
+    <hr>
     <h3>2. Create Your Setting</h3>
     <p>1. Set your back drop by clicking the picture icon on the bottom right hand corner. The possibilities are endless! Your setting can be a underground cavern or under the sea.</p>
-    <p>2. Now add your sprite. A sprite is what you will be adding functionality to. </p>
-    <img src="h1tagcodepen.png" style="width:100%;"/>
+    <p>2. Now add your sprite. A sprite is what you will be adding functionality to (your character in the game). You can do this by clicking on the cat at the bottom right hand corner.</p>
+    <img src="ScratchStep1.png" style="width:100%;" />
+    <hr>
     <h3>3. Add Your Content</h3>
     <p> The "hr" tag helps break content apart from others through creating a line of separation from the rest of the content.</p>
     <p>1. For the first section of your website use a "h3" tag for your title.</p>
