--- a/volunteer.html
+++ b/volunteer.html
@@ -26,24 +26,27 @@
                     <a href="Photos.html" id="#photos">Photos</a>
                     <a href="FAQ.html" id="#FAQ">FAQ</a>
                     <a href="CodePen.html">Practice Lesson</a>
-                    <div class="dropdown">
-                        <a href="Contact.html" class="bar-button button">Resources</a>
-                        <div class="dropdown-content">
-                            <a href="Contact.html">Resources</a>
-                            <a href="volunteer.html" id="#links">Links</a>
-                        </div>
-                    </div>
                 </div>
             </div>
-            <a href="Contact.html" class="bar-button button">Contact Us</a>
+            <div class="dropdown">
+                <a href="Contact.html" class="bar-button button">Contact Us</a>
+                <div class="dropdown-content">
+                    <a href="Contact.html">Contact Us</a>
+                    <a href="volunteer.html">Volunteer</a>
+                </div>
+            </div>
         </div>
 
     </div>
 </div>
 
+<div class="content-mission" style="max-width:1100px">
+    <div class="row-mission padding-mission64" id="mission">
+        <img src="Volunteer%20with%20us.png" style="width:100%;"/>
+        <div class="typeform-widget" data-url="https://wattcoding.typeform.com/to/pULOuD" style="width: 100%; height: 500px;"></div><script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=pULOuD&utm_source=typeform.com-14210832-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
+    </div>
+</div>
 
-
-<div class="typeform-widget" data-url="https://wattcoding.typeform.com/to/pULOuD" style="width: 100%; height: 500px;"></div><script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=pULOuD&utm_source=typeform.com-14210832-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
 </div>
 </body>
 </html>
