--- a/Contact.html
+++ b/Contact.html
@@ -25,7 +25,8 @@
                     <a href="Links.html" id="#links">Links</a>
                     <a href="Photos.html" id="#photos">Photos</a>
                     <a href="FAQ.html" id="#FAQ">FAQ</a>
-                    <a href="CodePen.html">Practice Lesson</a>
+                    <a href="CodePen.html">Practice Lesson 1</a>
+                    <a href="Scratch.html">Practice Lesson 2</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -39,7 +40,6 @@
 
     </div>
 </div>
-
 
 
 <div class="content-mission" style="max-width:1100px">
