--- a/Scratch.html
+++ b/Scratch.html
@@ -26,7 +26,8 @@
                     <a href="Links.html" id="#links">Links</a>
                     <a href="Photos.html" id="#photos">Photos</a>
                     <a href="FAQ.html" id="#FAQ">FAQ</a>
-                    <a href="CodePen.html">Practice Lesson</a>
+                    <a href="CodePen.html">Practice Lesson 1</a>
+                    <a href="Scratch.html">Practice Lesson 2</a>
                 </div>
             </div>
             <div class="dropdown">
