added scratch game

--- a/Scratch.html
+++ b/Scratch.html
@@ -9,7 +9,14 @@
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="icon" type=logo" href="logo.png"/>
-
+<style>
+    .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+    }
+</style>
 </head>
 <body>
 <script src="WATT.js"></script>
@@ -46,7 +53,7 @@
         <img src="Practice.png" style="width:100%;"/>
 
     </div>
-
+    <iframe src="https://scratch.mit.edu/projects/320208670/embed" class="center" allowtransparency="true" width="485" height="402"  frameborder="0" scrolling="no" allowfullscreen></iframe>
     <h1>Practice Lesson</h1>
     <h2>Let's Make a Game</h2>
     <hr>
