created extra drop down

--- a/Scratch.html
+++ b/Scratch.html
@@ -34,6 +34,7 @@
                     <a href="Photos.html" id="#photos">Photos</a>
                     <a href="FAQ.html" id="#FAQ">FAQ</a>
                     <a href="CodePen.html">Practice Lesson</a>
+                    <a href="Scratch.html">Practice Lesson 2</a>
                 </div>
             </div>
             <div class="dropdown">
