finished scratch game

--- a/Scratch.html
+++ b/Scratch.html
@@ -77,12 +77,21 @@
     <p>4. In the if statement add motion controls. To move your sprite to the right use "point in the direction 90" and "change x by 10".</p>
     <p>5. Repeat steps 1-4 with the exception that in order to move your sprite to the left you will use "point in the direction -90" and "change x by -10" </p>
     <img src="ScratchStep2.png" style="width:100%;">
+    <hr>
     <h3>4. Try It Yourself</h3>
-    <p>1. Add a platform object sprite</p>
+    <p>1. Add a platform object sprite and make ot green. </p>
     <p>2. Add a event starter event for your platform sprite and in sensing add a "reset timer function function". This means if you click the event starter the game will restart.</p>
     <p>Your turn: Try to make the platform sprite object move left and right. Hint: use the "go to x: and y: and "move __ steps" functions.</p>
     <img src="ScratchStep3.png" style="width:100%;">
+    <hr>
     <h3>5. Adding Game Components</h3>
+    <p>1. Add another control, forever loop, and if statement. Within the if statement add the "not operator".</p>
+    <p>2. Within the not operator add a "touch color green".</p>
+    <p>3. Under the if statement add "change y by -5" because if the sprite is not touching the platform we want the sprite to fall off the platform.</p>
+    <p>4. Repeat step 1 but add the "and operator" instead.</p>
+    <p>5. In the if statement add "if space key is pressed" and "touching color green".</p>
+    <p>6. Under the if add the repeat control. Under that add "change y by 10" because if the sprite is touching the green we want to to go up not off the screen.</p>
+    <img src="ScratchStep4.png" style="width:100%;">
    </div>
 </body>
 </html>
