finished scratch game

--- a/Scratch.html
+++ b/Scratch.html
@@ -79,7 +79,7 @@
     <img src="ScratchStep2.png" style="width:100%;">
     <hr>
     <h3>4. Try It Yourself</h3>
-    <p>1. Add a platform object sprite and make ot green. </p>
+    <p>1. Add a platform object sprite and make it green. </p>
     <p>2. Add a event starter event for your platform sprite and in sensing add a "reset timer function function". This means if you click the event starter the game will restart.</p>
     <p>Your turn: Try to make the platform sprite object move left and right. Hint: use the "go to x: and y: and "move __ steps" functions.</p>
     <img src="ScratchStep3.png" style="width:100%;">
