created a html file called navbar

--- a/WATT.html
+++ b/WATT.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 <script src="WATT.js"></script>
+<!--<iframe src="navbar.html"></iframe>-->
 <div class="top-nav">
     <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">
         <a href="WATT.html" class="bar-button button">WATT CODING</a>
