--- a/WATT.html
+++ b/WATT.html
@@ -12,7 +12,9 @@
 </head>
 <body>
 <script src="WATT.js"></script>
-<!--<iframe src="navbar.html"></iframe>-->
+
+<!--<iframe src="navbar.html" height="100%" width="100%"></iframe>-->
+<!--<body style="width:100%"><iframe src="navbar.html" style="height: 50%; overflow: hidden;  width: 100%;"></iframe>-->
 <div class="top-nav">
     <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">
         <a href="WATT.html" class="bar-button button">WATT CODING</a>
@@ -115,7 +117,6 @@
         <div class=stT id="stT">
             <h3>St. Therese School</h3>
             <a href="https://www.stcaseattle.org/"><img class= stT src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTunoq2JkIoieOhacx_7DKq-4Mf6yFfT19T6zgPhLSwPY2GqbmHVg" alt="St. Therese School Logo" height="200"></a>
-            <br>
             <br>
             <br>
             <div class="container">
