finalized formatting of our team page

--- a/Our-Team.html
+++ b/Our-Team.html
@@ -48,7 +48,7 @@
     <div class="row-mission padding-mission64" id="mission">
 
         <img src="Team.png"  style="width:100%;" id="team"/>
-        <<!-- Teampage embed for WATT Coding -->
+        <!-- Teampage embed for WATT Coding -->
         <ins class="teampage" data-id="watt-coding">Build with <a href="https://teampa.ge/" target="_top">Teampage</a>.</ins>
         <script defer src="https://teampa.ge/build/teampage-load.js"></script>
             </div>
