made it display using iframe

--- a/Contact.html
+++ b/Contact.html
@@ -11,35 +11,36 @@
 
 </head>
 <body>
-<script src="WATT.js"></script>
-<div class="top-nav">
-    <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">
-        <a href="WATT.html" class="bar-button button">WATT CODING</a>
-        <div class="right hide-small">
-            <a href="Calendar.html" class="bar-button button">Calendar</a>
-            <a href="Our-Team.html" class="bar-button button">Our Team</a>
-            <div class="dropdown">
-                <a href="Resources.html" class="bar-button button">Resources</a>
-                <div class="dropdown-content">
-                    <a href="Resources.html">Resources</a>
-                    <a href="Links.html" id="#links">Links</a>
-                    <a href="Photos.html" id="#photos">Photos</a>
-                    <a href="FAQ.html" id="#FAQ">FAQ</a>
-                    <a href="CodePen.html">Practice Lesson 1</a>
-                    <a href="Scratch.html">Practice Lesson 2</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="Contact.html" class="bar-button button">Contact Us</a>
-                <div class="dropdown-content">
-                    <a href="Contact.html">Contact Us</a>
-                    <a href="volunteer.html">Volunteer</a>
-                </div>
-            </div>
-        </div>
 
-    </div>
-</div>
+<!--<script src="WATT.js"></script>-->
+<!--<div class="top-nav">-->
+<!--    <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">-->
+<!--        <a href="WATT.html" class="bar-button button">WATT CODING</a>-->
+<!--        <div class="right hide-small">-->
+<!--            <a href="Calendar.html" class="bar-button button">Calendar</a>-->
+<!--            <a href="Our-Team.html" class="bar-button button">Our Team</a>-->
+<!--            <div class="dropdown">-->
+<!--                <a href="Resources.html" class="bar-button button">Resources</a>-->
+<!--                <div class="dropdown-content">-->
+<!--                    <a href="Resources.html">Resources</a>-->
+<!--                    <a href="Links.html" id="#links">Links</a>-->
+<!--                    <a href="Photos.html" id="#photos">Photos</a>-->
+<!--                    <a href="FAQ.html" id="#FAQ">FAQ</a>-->
+<!--                    <a href="CodePen.html">Practice Lesson 1</a>-->
+<!--                    <a href="Scratch.html">Practice Lesson 2</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="dropdown">-->
+<!--                <a href="Contact.html" class="bar-button button">Contact Us</a>-->
+<!--                <div class="dropdown-content">-->
+<!--                    <a href="Contact.html">Contact Us</a>-->
+<!--                    <a href="volunteer.html">Volunteer</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+
+<!--    </div>-->
+<!--</div>-->
 
 
 <div class="content-mission" style="max-width:1100px">
