--- a/navbar.html
+++ b/navbar.html
@@ -9,36 +9,40 @@
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="icon" type=logo" href="logo.png"/>
 
+
 </head>
 <body>
+
+
 <script src="WATT.js"></script>
+<iframe src="WATT.html" frameborder="0" name="test" id="WATT" width=100% height=1000 class="center-iframe"></iframe>
 <div class="top-nav">
     <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">
-        <a href="WATT.html" class="bar-button button">WATT CODING</a>
+        <a class="bar-button button center-iframe" onclick="test.location.href='WATT.html';document.getElementById('WATT')">WATT CODING</a>
         <div class="right hide-small">
-            <a href="Calendar.html" class="bar-button button">Calendar</a>
-            <a href="Our-Team.html" class="bar-button button">Our Team</a>
+            <a class="bar-button button center-iframe" onclick="test.location.href='Calendar.html';document.getElementById('WATT')">Calendar</a>
+            <a class="bar-button button center-iframe" onclick="test.location.href='Our-Team.html';document.getElementById('WATT')" >Our Team</a>
             <div class="dropdown">
-                <a href="Resources.html" class="bar-button button">Resources</a>
+                <a class="bar-button button" onclick="test.location.href='Resources.html';document.getElementById('WATT')">Resources</a>
                 <div class="dropdown-content">
-                    <a href="Resources.html">Resources</a>
-                    <a href="Links.html" id="#links">Links</a>
-                    <a href="Photos.html" id="#photos">Photos</a>
-                    <a href="FAQ.html" id="#FAQ">FAQ</a>
-                    <a href="CodePen.html">Practice Lesson 1</a>
-                    <a href="Scratch.html">Practice Lesson 2</a>
+                    <a class="center" onclick="test.location.href='Resources.html';document.getElementById('WATT')">Resources</a>
+                    <a class="center" onclick="test.location.href='Links.html';document.getElementById('WATT')" id="#links">Links</a>
+                    <a class="center" onclick="test.location.href='Photos.html';document.getElementById('WATT')"id="#photos">Photos</a>
+                    <a class="center" onclick="test.location.href='FAQ.html';document.getElementById('WATT')" id="#FAQ">FAQ</a>
+                    <a class="center" onclick="test.location.href='CodePen.html';document.getElementById('WATT')">Practice Lesson 1</a>
+                    <a class="center" onclick="test.location.href='Scratch.html';document.getElementById('WATT')">Practice Lesson 2</a>
                 </div>
             </div>
             <div class="dropdown">
-                <a href="Contact.html" class="bar-button button">Contact Us</a>
+                <a  onclick="test.location.href='Contact.html';document.getElementById('WATT')"class="bar-button button center">Contact Us</a>
                 <div class="dropdown-content">
-                    <a href="Contact.html">Contact Us</a>
-                    <a href="volunteer.html">Volunteer</a>
+                    <a class="center" onclick="test.location.href='Contact.html';document.getElementById('WATT')">Contact Us</a>
+                    <a class="center" onclick="test.location.href='volunteer.html';document.getElementById('WATT')">Volunteer</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
-</div>
+<!--<input class="bar-button button" onclick="test.location.href='WATT.html';document.getElementById('WATT')"  value="WATT CODING">-->
 </body>
 </html>
