--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>-<
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="icon" type=logo" href="logo.png"/>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -43,6 +43,18 @@
         </div>
     </div>
 </div>
-<!--<input class="bar-button button" onclick="test.location.href='WATT.html';document.getElementById('WATT')"  value="WATT CODING">-->
+<!--<a href="#" class="fa fa-instagram"></a>-->
+<div class="navbar-bottom">
+    <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">
+        <div class="right hide-small">
+        <a href="https://www.instagram.com/wattcoding/?hl=en" class="fa fa-instagram"></a>
+        <a href="https://www.linkedin.com/company/watt-coding/about/" class="fa fa-linkedin"></a>
+        <a href="https://www.facebook.com/ncwit/" class="fa fa-facebook"></a>
+    </div>
+    </div>
+</div>
+
+
+
 </body>
 </html>
