fixed contact us with a button at the bottom-Madeleine

--- a/navbar.html
+++ b/navbar.html
@@ -34,18 +34,19 @@
                 </div>
             </div>
             <div class="dropdown">
-                <a  onclick="test.location.href='Contact.html';document.getElementById('WATT')"class="bar-button button center">Contact Us</a>
-                <div class="dropdown-content">
-                    <a class="center" onclick="test.location.href='Contact.html';document.getElementById('WATT')">Contact Us</a>
-                    <a class="center" onclick="test.location.href='volunteer.html';document.getElementById('WATT')">Volunteer</a>
-                </div>
+                <a  onclick="test.location.href='volunteer.html';document.getElementById('WATT')"class="bar-button button center">Volunteer</a>
+<!--                <div class="dropdown-content">-->
+<!--                    <a class="center" onclick="test.location.href='Contact.html';document.getElementById('WATT')">Contact Us</a>-->
+<!--                    <a class="center" onclick="test.location.href='volunteer.html';document.getElementById('WATT')">Volunteer</a>-->
+<!--                </div>-->
             </div>
         </div>
     </div>
 </div>
-<!--<a href="#" class="fa fa-instagram"></a>-->
+
 <div class="navbar-bottom">
     <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">
+        <a class="typeform-share bar-button button" href="https://wattcoding.typeform.com/to/PlHowG" data-mode="popup" target="_blank">Contact Us</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
         <div class="right hide-small">
         <a href="https://www.instagram.com/wattcoding/?hl=en" class="fa fa-instagram"></a>
         <a href="https://www.linkedin.com/company/watt-coding/about/" class="fa fa-linkedin"></a>
