--- a/volunteer.html
+++ b/volunteer.html
@@ -2,24 +2,174 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <!--    <link rel="stylesheet" href="style.css">-->
     <title>WATT Website</title>
     <script src="WATT.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="icon" type=logo" href="logo.png"/>
+    <style>
+        @import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,600);
 
+        * {
+            margin:0;
+            padding:0;
+            box-sizing:border-box;
+            -webkit-box-sizing:border-box;
+            -moz-box-sizing:border-box;
+            -webkit-font-smoothing:antialiased;
+            -moz-font-smoothing:antialiased;
+            -o-font-smoothing:antialiased;
+            font-smoothing:antialiased;
+            text-rendering:optimizeLegibility;
+        }
+
+        body {
+            font-family:"Open Sans", Helvetica, Arial, sans-serif;
+            font-weight:300;
+            font-size: 12px;
+            line-height:30px;
+            color:#777;
+            background:#0CF;
+        }
+
+        .container {
+            max-width:400px;
+            width:100%;
+            margin:0 auto;
+            position:relative;
+        }
+
+        #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
+
+        #contact {
+            background:#F9F9F9;
+            padding:25px;
+            margin:50px 0;
+        }
+
+        #contact h3 {
+            color: #F96;
+            display: block;
+            font-size: 30px;
+            font-weight: 400;
+        }
+
+        #contact h4 {
+            margin:5px 0 15px;
+            display:block;
+            font-size:13px;
+        }
+
+        fieldset {
+            border: medium none !important;
+            margin: 0 0 10px;
+            min-width: 100%;
+            padding: 0;
+            width: 100%;
+        }
+
+        #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
+            width:100%;
+            border:1px solid #CCC;
+            background:#FFF;
+            margin:0 0 5px;
+            padding:10px;
+        }
+
+        #contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
+            -webkit-transition:border-color 0.3s ease-in-out;
+            -moz-transition:border-color 0.3s ease-in-out;
+            transition:border-color 0.3s ease-in-out;
+            border:1px solid #AAA;
+        }
+
+        #contact textarea {
+            height:100px;
+            max-width:100%;
+            resize:none;
+        }
+
+        #contact button[type="submit"] {
+            cursor:pointer;
+            width:100%;
+            border:none;
+            background:#0CF;
+            color:#FFF;
+            margin:0 0 5px;
+            padding:10px;
+            font-size:15px;
+        }
+
+        #contact button[type="submit"]:hover {
+            background:#09C;
+            -webkit-transition:background 0.3s ease-in-out;
+            -moz-transition:background 0.3s ease-in-out;
+            transition:background-color 0.3s ease-in-out;
+        }
+
+        #contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
+
+        #contact input:focus, #contact textarea:focus {
+            outline:0;
+            border:1px solid #999;
+        }
+        ::-webkit-input-placeholder {
+            color:#888;
+        }
+        :-moz-placeholder {
+            color:#888;
+        }
+        ::-moz-placeholder {
+            color:#888;
+        }
+        :-ms-input-placeholder {
+            color:#888;
+        }
+
+    </style>
 </head>
 <body>
 <script src="WATT.js"></script>
 
 
-<div class="content-mission" style="max-width:1100px">
-    <div class="row-mission padding-mission64" id="mission">
-        <img src="Volunteer%20with%20us.png" style="width:100%;"/>
-        <div class="typeform-widget" data-url="https://wattcoding.typeform.com/to/pULOuD" style="width: 100%; height: 500px;"></div><script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=pULOuD&utm_source=typeform.com-14210832-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
-    </div>
-</div>
+<!--<div class="content-mission" style="max-width:1100px">-->
+<!--&lt;!&ndash;    <div class="row-mission padding-mission64" id="mission">&ndash;&gt;-->
+<!--&lt;!&ndash;        <img src="Volunteer%20with%20us.png" style="width:100%;"/>&ndash;&gt;-->
+<!--&lt;!&ndash;        <div class="typeform-widget" data-url="https://wattcoding.typeform.com/to/pULOuD" style="width: 100%; height: 500px;"></div><script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=pULOuD&utm_source=typeform.com-14210832-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>&ndash;&gt;-->
+<!--    </div>-->
+<!--</div>-->
+
+<div class="container">
+    <form id="contact" action="" method="post">
+        <h3>Quick Contact</h3>
+        <h4>Contact us today, and get reply with in 24 hours!</h4>
+        <fieldset>
+            <input placeholder="Your name" type="text" tabindex="1">
+        </fieldset>
+        <fieldset>
+            <input placeholder="Your Email Address" type="email" tabindex="2">
+        </fieldset>
+        <fieldset>
+            <input placeholder="Your Phone Number" type="tel" tabindex="3">
+        </fieldset>
+        <fieldset>
+            <input placeholder="Your Grade" type="text" tabindex="4">
+        </fieldset>
+        <fieldset>
+            <input placeholder="Your School" type="text" tabindex="4" >
+        </fieldset>
+        <fieldset>
+            <textarea placeholder="Your Availability" tabindex="5" ></textarea>
+        </fieldset>
+        <fieldset>
+            <textarea placeholder="Any Questions?" tabindex="5"></textarea>
+        </fieldset>
+        <a>
+            <button name="submit" href = 'mailto:wattcoding@gmail.com?body=&subject=Contact WATT' type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+            </fieldset>
+    </form>
+
 
 </div>
 </body>
