--- a/navbar.html
+++ b/navbar.html
@@ -34,7 +34,9 @@
                 </div>
             </div>
             <div class="dropdown">
-                <a  onclick="test.location.href='volunteer.html';document.getElementById('WATT')"class="bar-button button center">Volunteer</a>
+                <a class="typeform-share bar-button button" href="https://wattcoding.typeform.com/to/pULOuD" data-mode="popup" >Volunteer </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+<!--                <a  onclick="test.location.href='volunteer.html';document.getElementById('WATT')"class="bar-button button center">Volunteer</a>-->
+
 <!--                <div class="dropdown-content">-->
 <!--                    <a class="center" onclick="test.location.href='Contact.html';document.getElementById('WATT')">Contact Us</a>-->
 <!--                    <a class="center" onclick="test.location.href='volunteer.html';document.getElementById('WATT')">Volunteer</a>-->
