added donate functionality- MADELEINE

--- a/navbar.html
+++ b/navbar.html
@@ -49,6 +49,7 @@
 <div class="navbar-bottom">
     <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">
         <a class="typeform-share bar-button button" href="https://wattcoding.typeform.com/to/PlHowG" data-mode="popup" target="_blank">Contact Us</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+        <a class="bar-button button" href="https://www.gofundme.com/manage/watt-coding-supporting-girls-in-the-stem-field">Donate</a>
         <div class="right hide-small">
         <a href="https://www.instagram.com/wattcoding/?hl=en" class="fa fa-instagram"></a>
             <a href="https://www.facebook.com/ncwit/" class="fa fa-facebook"></a>
