doing more animations-Madeleine

--- a/Calendar.html
+++ b/Calendar.html
@@ -8,7 +8,21 @@
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="icon" type=logo" href="logo.png"/>
+<style>
+    .m {
+        position: relative;
+        animation-name: example;
+        animation-duration: 2s;
+    }
 
+    @keyframes example {
+        0%   {left:200px; top:0px;}
+        /*25%  {left:0px; top:200px;}*/
+        /*50%  {left:200px; top:200px;}*/
+        /*75%  {left:200px; top:0px;}*/
+        100% {left:0px; top:0px;}
+    }
+</style>
 </head>
 <body>
 <script src="WATT.js"></script>
@@ -16,7 +30,7 @@
 
 
 
-
+<div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
         <img src="CALENDAR.png" style="width:100%;" id="calendar"/>
@@ -24,6 +38,7 @@
             <script src="https://calendar.time.ly/embed.js" data-src="https://calendar.time.ly/tdo4oo2k/" data-max-height="0" id="timely_script" class="timely-script"></script>
         </div>
     </div>
+</div>
 </div>
 </body>
 </html>
