--- a/Resources.html
+++ b/Resources.html
@@ -33,6 +33,32 @@
         background-color: rgba(210, 240, 241, .5);
         overflow: hidden;
     }
+    .m {
+        position: relative;
+        animation-name: example;
+        animation-duration: 2s;
+    }
+
+    @keyframes example {
+        0%   {left:200px; top:0px;}
+        /*25%  {left:0px; top:200px;}*/
+        /*50%  {left:200px; top:200px;}*/
+        /*75%  {left:200px; top:0px;}*/
+        100% {left:0px; top:0px;}
+    }
+    .n {
+        position: relative;
+        animation-name: ex;
+        animation-duration: 2s;
+    }
+
+    @keyframes ex {
+        0%   {left:-200px; top:0px;}
+        /*25%  {left:0px; top:200px;}*/
+        /*50%  {left:200px; top:200px;}*/
+        /*75%  {left:200px; top:0px;}*/
+        100% {left:0px; top:0px;}
+    }
 </style>
 </head>
 <body>
@@ -41,7 +67,7 @@
 
 
 
-
+<div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
         <img src="LINKS.png" id="links" style="width:100%;"/>
@@ -85,11 +111,13 @@
             <a data-flickr-embed="true" data-header="true"  href="https://www.flickr.com/photos/182390017@N07/albums/72157709391201017" title="WATT in the Classroom"><img src="https://live.staticflickr.com/65535/48183359311_f5f61436c6_b.jpg" width="678" height="850" alt="WATT in the Classroom"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
         </div>
 
+</div>
+</div>
 
 
 
 
-
+<div class="n">
         <img src="FAQ.png" style="width:100%;"/>
         <div class="FAQ" div id="FAQ">
             <button class="accordion">How did WATT start?</button>
@@ -136,7 +164,7 @@
 
 
     </div>
-
+</div>
 
 
 
