--- a/Our-Team.html
+++ b/Our-Team.html
@@ -8,14 +8,28 @@
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="icon" type=logo" href="logo.png"/>
+   <style>
+       .n {
+           position: relative;
+           animation-name: ex;
+           animation-duration: 2s;
+       }
 
+       @keyframes ex {
+           0%   {left:-200px; top:0px;}
+           /*25%  {left:0px; top:200px;}*/
+           /*50%  {left:200px; top:200px;}*/
+           /*75%  {left:200px; top:0px;}*/
+           100% {left:0px; top:0px;}
+       }
+   </style>
 </head>
 <body>
 <script src="WATT.js"></script>
 
 
 
-
+<div class="n">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
 
@@ -26,7 +40,7 @@
             </div>
         </div>
     </div>
-
+</div>
 
 
 
