finished animations!-Madeleine

--- a/Our-Team.html
+++ b/Our-Team.html
@@ -9,14 +9,14 @@
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="icon" type=logo" href="logo.png"/>
    <style>
-       .n {
+       .m {
            position: relative;
-           animation-name: ex;
+           animation-name: example;
            animation-duration: 2s;
        }
 
-       @keyframes ex {
-           0%   {left:-200px; top:0px;}
+       @keyframes example {
+           0%   {left:200px; top:0px;}
            /*25%  {left:0px; top:200px;}*/
            /*50%  {left:200px; top:200px;}*/
            /*75%  {left:200px; top:0px;}*/
@@ -29,7 +29,7 @@
 
 
 
-<div class="n">
+<div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
 
