--- a/CodePen.html
+++ b/CodePen.html
@@ -9,12 +9,26 @@
         <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
         <link rel="icon" type=logo" href="logo.png"/>
+<style>
+    .m {
+        position: relative;
+        animation-name: example;
+        animation-duration: 2s;
+    }
 
+    @keyframes example {
+        0%   {left:200px; top:0px;}
+        /*25%  {left:0px; top:200px;}*/
+        /*50%  {left:200px; top:200px;}*/
+        /*75%  {left:200px; top:0px;}*/
+        100% {left:0px; top:0px;}
+    }
+</style>
     </head>
     <body>
     <script src="WATT.js"></script>
 
-
+<div class="m">
     <div class="content-mission" style="max-width:1100px">
         <div class="row-mission padding-mission64" id="mission">
             <img src="Practice.png" style="width:100%;"/>
@@ -59,5 +73,7 @@
         <p>1. For example: To center a section of elements create a class in your css file. To create a class for a div use "div.nameofclass" and then brackets</p>
         <p>2. For the purpose of this lesson create a class that will center the text of your div elements. To center text use "text-align:center;</p>
         <img src="divelementcodepen.png" style="width:100%;" /></div>
+
+</div>
     </body>
     </html>
