--- a/FAQ.html
+++ b/FAQ.html
@@ -33,6 +33,19 @@
         background-color: rgba(210, 240, 241, .5);
         overflow: hidden;
     }
+    .m {
+        position: relative;
+        animation-name: example;
+        animation-duration: 2s;
+    }
+
+    @keyframes example {
+        0%   {left:200px; top:0px;}
+        /*25%  {left:0px; top:200px;}*/
+        /*50%  {left:200px; top:200px;}*/
+        /*75%  {left:200px; top:0px;}*/
+        100% {left:0px; top:0px;}
+    }
 </style>
 
 </head>
@@ -41,7 +54,7 @@
 
 
 
-
+<div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
         <img src="FAQ.png" style="width:100%;"/>
@@ -92,7 +105,7 @@
     </div>
 
 </div>
-
+</div>
 <script>
     var acc = document.getElementsByClassName("accordion");
     var i;
