--- a/Resources.html
+++ b/Resources.html
@@ -118,6 +118,8 @@
 
 
 <div class="n">
+    <div class="content-mission" style="max-width:1100px">
+        <div class="row-mission padding-mission64" id="mission">
         <img src="FAQ.png" style="width:100%;"/>
         <div class="FAQ" div id="FAQ">
             <button class="accordion">How did WATT start?</button>
@@ -164,6 +166,8 @@
 
 
     </div>
+    </div>
+</div>
 </div>
 
 
