--- a/HomePage.html
+++ b/HomePage.html
@@ -42,7 +42,7 @@
 
 <div class="navbar-bottom">
     <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">
-        <a class="typeform-share bar-button button" href="https://wattcoding.typeform.com/to/PlHowG" data-mode="popup" target="_blank">Contact Us</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+        <a class="typeform-share bar-button button"  href="FAQ.html" data-mode="popup" target="_blank">Contact Us</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
         <a class="bar-button button" href="https://www.gofundme.com/f/watt-coding-supporting-girls-in-the-stem-field&rcid=r01-156339912847-ddb18f7e12b24938&pc=ot_co_campmgmt_w">Donate</a>
         <div class="right hide-small">
         <a href="https://www.instagram.com/wattcoding/?hl=en" class="fa fa-instagram"></a>
