--- a/FAQ.html
+++ b/FAQ.html
@@ -99,13 +99,13 @@
                     Facebook: www.facebook.com/wattcoding
                     Instagram: @wattcoding.</p>
             </div>
+            <button class="typeform-share accordion-button" href="https://wattcoding.typeform.com/to/PlHowG" data-mode="popup"  target="_blank">Questions? </button> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
         </div>
-
-
     </div>
-    <div class="typeform-widget" data-url="https://wattcoding.typeform.com/to/PlHowG" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=PlHowG&utm_source=typeform.com-14210832-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
 </div>
 </div>
+
+
 <script>
     var acc = document.getElementsByClassName("accordion");
     var i;
@@ -122,7 +122,6 @@
         });
     }
 </script>
-
 
 
 </div>
