--- a/FAQ.html
+++ b/FAQ.html
@@ -99,7 +99,7 @@
                     Facebook: www.facebook.com/wattcoding
                     Instagram: @wattcoding.</p>
             </div>
-            <button class="typeform-share accordion-button" href="https://wattcoding.typeform.com/to/PlHowG" data-mode="popup"  target="_blank">Questions? </button> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+            <button class="typeform-share accordion-button" href="https://wattcoding.typeform.com/to/PlHowG" data-mode="popup"  target="_blank">More Questions? </button> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
         </div>
     </div>
 </div>
