--- a/HomePage.html
+++ b/HomePage.html
@@ -28,7 +28,7 @@
                     <a class="center" onclick="test.location.href='Resources.html';document.getElementById('WATT')">Resources</a>
                     <a class="center" onclick="test.location.href='Links.html';document.getElementById('WATT')" id="#links">Links</a>
                     <a class="center" onclick="test.location.href='Photos.html';document.getElementById('WATT')"id="#photos">Photos</a>
-                    <a class="center" onclick="test.location.href='FAQ.html';document.getElementById('WATT')" id="#FAQ">FAQ</a>
+<!--                    <a class="center" onclick="test.location.href='FAQ.html';document.getElementById('WATT')" id="#FAQ">FAQ</a>-->
                     <a class="center" onclick="test.location.href='CodePen.html';document.getElementById('WATT')">Practice Lesson 1</a>
                     <a class="center" onclick="test.location.href='Scratch.html';document.getElementById('WATT')">Practice Lesson 2</a>
                 </div>
