changed the scratch phoros

--- a/HTML/HomePage.html
+++ b/HTML/HomePage.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>WATT Website</title>
-    <script src="WATT.js"></script>
+    <script src="../WATT.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="icon" type=logo" href="logo.png"/>
+    <link rel="icon" type=logo" href="../Team%20Images/logo.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
 
 
-<script src="WATT.js"></script>
+<script src="../WATT.js"></script>
 <iframe src="WATT.html" frameborder="0" name="test" id="WATT" width=100% height=945 class="center-iframe"></iframe>
 <div class="top-nav">
     <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">
@@ -42,7 +42,7 @@
 
 <div class="navbar-bottom">
     <div class="bar white-banner padding-nav nav-box" style="letter-spacing:4px;">
-        <a class="typeform-share bar-button button"  href="FAQ.html" data-mode="popup" target="_blank">Questions?</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+        <a class="typeform-share bar-button button" href="FAQ.html" data-mode="popup" target="_blank">Questions?</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
         <a class="bar-button button" href="https://www.gofundme.com/f/watt-coding-supporting-girls-in-the-stem-field&rcid=r01-156339912847-ddb18f7e12b24938&pc=ot_co_campmgmt_w">Donate</a>
         <div class="right hide-small">
         <a href="https://www.instagram.com/wattcoding/?hl=en" class="fa fa-instagram"></a>
