--- a/HTML/Our-Team.html
+++ b/HTML/Our-Team.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>WATT Website</title>
-    <script src="WATT.js"></script>
+    <script src="../WATT.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="icon" type=logo" href="logo.png"/>
+    <link rel="icon" type=logo" href="../Team%20Images/logo.png"/>
    <style>
        .m {
            position: relative;
@@ -25,7 +25,7 @@
    </style>
 </head>
 <body>
-<script src="WATT.js"></script>
+<script src="../WATT.js"></script>
 
 
 
@@ -33,7 +33,7 @@
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
 
-        <img src="Team.png"  style="width:100%;" id="team"/>
+        <img src="../Header%20Images/Team.png" style="width:100%;" id="team"/>
         <!-- Teampage embed for WATT Coding -->
         <ins class="teampage" data-id="watt-coding">Build with <a href="https://teampa.ge/" target="_top">Teampage</a>.</ins>
         <script defer src="https://teampa.ge/build/teampage-load.js"></script>
