--- a/HTML/Scratch.html
+++ b/HTML/Scratch.html
@@ -3,12 +3,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>WATT Website</title>
-    <script src="WATT.js"></script>
+    <script src="../WATT.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="icon" type=logo" href="logo.png"/>
+    <link rel="icon" type=logo" href="../Team%20Images/logo.png"/>
 <style>
     .center {
         display: block;
@@ -32,12 +32,12 @@
 </style>
 </head>
 <body>
-<script src="WATT.js"></script>
+<script src="../WATT.js"></script>
 
 <div class="m">
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
-        <img src="Practice.png" style="width:100%;"/>
+        <img src="../Header%20Images/Practice.png" style="width:100%;"/>
 
     </div>
     <iframe src="https://scratch.mit.edu/projects/320208670/embed" class="center" allowtransparency="true" width="485" height="402"  frameborder="0" scrolling="no" allowfullscreen></iframe>
@@ -52,7 +52,7 @@
     <h3>2. Create Your Setting</h3>
     <p>1. Set your back drop by clicking the picture icon on the bottom right hand corner. The possibilities are endless! Your setting can be a underground cavern, under the sea and more!</p>
     <p>2. Now add your sprite. A sprite is what you will be adding functionality to (your character in the game). You can do this by clicking on the cat at the bottom right hand corner.</p>
-    <img src="ScratchStep1.png" style="width:100%;" />
+  <img src="../Scratch Images/ScratchStep1.png" style="width:100%;"/>
     <hr>
     <h3>3. Add Functionality</h3>
     <p>Now it's time to do your coding</p>
@@ -62,13 +62,13 @@
     <p>3. Within the forever loop add a if statement from the "controls". In your if statement add a sensing control by using the "when key is pressed" function.</p>
     <p>4. In the if statement add motion controls. To move your sprite to the right use "point in the direction 90" and "change x by 10".</p>
     <p>5. Repeat steps 1-4 with the exception that in order to move your sprite to the left you will use "point in the direction -90" and "change x by -10" </p>
-    <img src="ScratchStep2.png" style="width:100%;">
+    <img src="../Scratch Images/ScratchStep2.png" style="width:100%;"/>
     <hr>
     <h3>4. Try It Yourself</h3>
     <p>1. Add a platform object sprite and make it green. </p>
     <p>2. Add a event starter event for your platform sprite and in sensing add a "reset timer function function". This means if you click the event starter the game will restart.</p>
     <p>Your turn: Try to make the platform sprite object move left and right. Hint: use the "go to x: and y: and "move __ steps" functions.</p>
-    <img src="ScratchStep3.png" style="width:100%;">
+    <img src="../Scratch Images/ScratchStep3.png" style="width:100%;"/>
     <hr>
     <h3>5. Adding Game Components</h3>
     <p>1. Add another control, forever loop, and if statement. Within the if statement add the "not operator".</p>
@@ -77,8 +77,7 @@
     <p>4. Repeat step 1 but add the "and operator" instead.</p>
     <p>5. In the if statement add "if space key is pressed" and "touching color green".</p>
     <p>6. Under the if add the repeat control. Under that add "change y by 10" because if the sprite is touching the green we want to to go up not off the screen.</p>
-    <img src="ScratchStep4.png" style="width:100%;">
-   </div>
+    <img src="../Scratch Images/ScratchStep4.png" style="width:100%;"/></div>
 </div>
 </body>
 </html>
