--- a/HTML/CodePen.html
+++ b/HTML/CodePen.html
@@ -3,12 +3,12 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
         <title>WATT Website</title>
-        <script src="WATT.js"></script>
+        <script src="../WATT.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-        <link rel="icon" type=logo" href="logo.png"/>
+        <link rel="icon" type=logo" href="../Team%20Images/logo.png"/>
 <style>
     .m {
         position: relative;
@@ -26,12 +26,12 @@
 </style>
     </head>
     <body>
-    <script src="WATT.js"></script>
+    <script src="../WATT.js"></script>
 
 <div class="m">
     <div class="content-mission" style="max-width:1100px">
         <div class="row-mission padding-mission64" id="mission">
-            <img src="Practice.png" style="width:100%;"/>
+            <img src="../Header%20Images/Practice.png" style="width:100%;"/>
             <p class="codepen" data-height="600" data-theme-id="0" data-default-tab="html,result" data-user="wattcoding" data-slug-hash="WqyKLX" style="height: 1000px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="WATT WEBSITE">
   <span>See the Pen <a href="https://codepen.io/wattcoding/pen/WqyKLX/">
   WATT WEBSITE</a> by WATT (<a href="https://codepen.io/wattcoding">@wattcoding</a>)
@@ -50,29 +50,29 @@
         <p>HTML stands for HyperText Markup Language. HTML displays all of your text, pictures, videos and more!</p>
         <p>1. Start by creating the title of your page by using the "h1" tags. An "h1" tag is normally used for the title or any emphasized text that you want on the page. "h1" is the largest header tag you can have and the smallest header tag is "h6". NOTE: All tags need to be closed by a "/' mark.</p>
         <p>2. Optional: To center text use the "center" tag</p>
-        <img src="Step1codepen.png" style="width:100%;" />
+        <img src="Scratch%20Code%20Pen/Step1codepen.png" style="width:100%;" />
         <h3>3. Add Your Content</h3>
         <p> The "hr" tag helps break content apart from others through creating a line of separation from the rest of the content.</p>
         <p>1. For the first section of your website use a "h3" tag for your title.</p>
         <p>2. For your more lengthy paragraphs use the "p" tag to display text onto your screen.</p>
         <p>3. Note: to center text you can create a class called "center" which will center all your text for you in CSS. To create a class in css use a "." and then name the class. Place all of the class content in "{}" brackets.</p>
         <p> Extra: You can also change the text color of your titles and paragraphs. In CSS, put the name of the tag you're using and then inside the brackets put color: "purple". To change the font you're using include in the brackets font-family: "'Times New Roman', serif". This allows for you to create a font family which allows you to prioritize a list of fonts you would like to use. For example if Times New Roman cannot be accessed the text would be changed to serif. </p>
-        <img src="codepen step 3.png" style="width:100%;"/>
+        <img src="../CodePen%20Images/codepen%20step%203.png" style="width:100%;"/>
         <h3>4. Adding Images</h3>
         <p>In HTML images are defined using a "img" tag. Use img src= " " to specify a URL in which you want to access a photo from. The "alt" tag is used a a description of your picture. This is helpful if your website doesnt load the picture, the user will still be able to know what the image was supposed to be.</p>
         <p>Note: You cannot just copy the image url. Right click and copy the image address and then paste that for the image src.</p>
-        <img src="ourmissioncodepen.png" style="width:100%;"/>
+        <img src="../CodePen%20Images/ourmissioncodepen.png" style="width:100%;"/>
         <h3>5. Adding Videos</h3>
         <p>The tag iframe is used when you want to display another web page in your web page such as a youtube video.</p>
         <p>1. Use the format of "iframe src="youtube-video"</p>
         <p>2. You can also change the height and width of a image or video by adding within the iframe tag "height=num" and "width=num"</p>
-        <img src="addedvideocodepen.png" style="width:100%;"/>
+        <img src="../CodePen%20Images/addedvideocodepen.png" style="width:100%;"/>
         <hr>
         <h3>6. Creating "DIVS"</h3>
         <p>A div element creates a section or division. You can identify a div by giving it a class name.</p>
         <p>1. For example: To center a section of elements create a class in your css file. To create a class for a div use "div.nameofclass" and then brackets</p>
         <p>2. For the purpose of this lesson create a class that will center the text of your div elements. To center text use "text-align:center;</p>
-        <img src="divelementcodepen.png" style="width:100%;" /></div>
+        <img src="../CodePen%20Images/divelementcodepen.png" style="width:100%;" /></div>
 
 </div>
     </body>
