--- a/HTML/WATTPage.html
+++ b/HTML/WATTPage.html
@@ -2,89 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <title>WATT Website</title>
-    <script src="WATT.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="icon" type=logo" href="logo.png"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-    .m {
-          position: relative;
-          animation-name: example;
-          animation-duration: 2s;
-      }
 
-    @keyframes example {
-        0%   {left:200px; top:0px;}
-        /*25%  {left:0px; top:200px;}*/
-        /*50%  {left:200px; top:200px;}*/
-        /*75%  {left:200px; top:0px;}*/
-        100% {left:0px; top:0px;}
-    }
-    .n {
-        position: relative;
-        animation-name: ex;
-        animation-duration: 2s;
-    }
-
-    @keyframes ex {
-        0%   {left:-200px; top:0px;}
-        /*25%  {left:0px; top:200px;}*/
-        /*50%  {left:200px; top:200px;}*/
-        /*75%  {left:200px; top:0px;}*/
-        100% {left:0px; top:0px;}
-    }
-
-</style>
 </head>
 <body>
-<script src="WATT.js"></script>
+<!-- Slideshow container -->
+<div class="slideshow-container">
 
-
-<div class="n">
-<header>
-
-    <!-- Slideshow container -->
-    <div class="slideshow-container">
-
-        <!-- Full-width images with number and caption text -->
-        <div class="mySlides fade">
-            <div class="numbertext">1 / 3</div>
-            <img src="https://static.wixstatic.com/media/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg/v1/crop/x_0,y_208,w_1500,h_533/fill/w_1499,h_533,al_c,q_85/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg" alt="Girls Who are Coding" style="width: 100%;">
-        </div>
-
-        <div class="mySlides fade">
-            <div class="numbertext">2 / 3</div>
-            <img src="banner2.png" style="object-position: 50% 50%; width: 1000px; height: 348px; object-fit: cover;">
-        </div>
-
-        <div class="mySlides fade">
-            <div class="numbertext">3 / 3</div>
-            <img src="https://static.wixstatic.com/media/cfb250_ac1d6352f183442c913698239b27509c~mv2_d_4032_3024_s_4_2.jpg/v1/fill/w_2056,h_1542,fp_0.50_0.50,q_90/cfb250_ac1d6352f183442c913698239b27509c~mv2_d_4032_3024_s_4_2.webp?retry=1" style="object-position: 50% 50%; width: 1000px; height: 348px; object-fit: cover;">
-        </div>
-
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="https://static.wixstatic.com/media/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg/v1/crop/x_0,y_208,w_1500,h_533/fill/w_1499,h_533,al_c,q_85/cfb250_3993eae0ee4d4a0a9f9b991682380ee2~mv2.jpg" alt="Girls Who are Coding" style="width: 100%;">
     </div>
-    <br>
 
-    <!-- The dots/circles -->
-    <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-    </div></header>
+    <div class="mySlides fade">
+        <div class="numbertext">2 / 3</div>
+        <img src="../Banner%20Images/banner2.png" style="object-position: 50% 50%; width: 979px; height: 348px; object-fit: cover;">
+    </div>
 
+    <div class="mySlides fade">
+        <div class="numbertext">3 / 3</div>
+        <img src="https://static.wixstatic.com/media/cfb250_ac1d6352f183442c913698239b27509c~mv2_d_4032_3024_s_4_2.jpg/v1/fill/w_2056,h_1542,fp_0.50_0.50,q_90/cfb250_ac1d6352f183442c913698239b27509c~mv2_d_4032_3024_s_4_2.webp?retry=1" style="object-position: 50% 50%; width: 979px; height: 348px; object-fit: cover;">
+    </div>
+
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
-<div class="m">
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+</div></header>
+
+
+
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
         <table>
             <tr>
-                <td><img class="img-mission" src="logo.png" alt="WATT logo"></td>
+                <td><img class="img-mission" src="../Team%20Images/logo.png" alt="WATT logo"></td>
                 <td>
 
                     <div class="col-mission padding-mission1224">
@@ -94,16 +53,13 @@
             </tr>
         </table>
     </div>
-</div>
-</div>
+    <hr>
 
 
 
-<div class="m">
-    <div class="content-mission" style="max-width:1100px">
-        <div class="row-mission padding-mission64" id="mission">
 
-    <img src="LOCATIONS.png" style="width:100%;" id="schools"/>
+
+    <img src="../Header%20Images/LOCATIONS.png" style="width:100%;" id="schools"/>
     <div class="schools" id="schools">
         <hr>
         <div class=stAl id="stAl">
@@ -141,9 +97,8 @@
         </div>
     </div>
 
-        </div>
-    </div>
-</div>
+
+
 
     <script>
         // photo slideshow banner homepage
@@ -178,7 +133,5 @@
     </script>
 
 
-
-</div>
 </body>
 </html>
