--- a/HTML/volunteer.html
+++ b/HTML/volunteer.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>WATT Website</title>
-    <script src="WATT.js"></script>
+    <script src="../WATT.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Vollkorn&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="icon" type=logo" href="logo.png"/>
+    <link rel="icon" type=logo" href="../Team%20Images/logo.png"/>
 
 </head>
 <body>
-<script src="WATT.js"></script>
+<script src="../WATT.js"></script>
 
 <div class="content-mission" style="max-width:1100px">
     <div class="row-mission padding-mission64" id="mission">
